wal-macros/tests/html_macro_tests/fragments/fragment_fail.stderr
error: This opening fragment does not have a coressponding closing fragment. (hint: try adding `</>`)
 --> tests/html_macro_tests/fragments/fragment_fail.rs:4:13
  |
4 |     html! { <> };
  |             ^^

error: This opening fragment does not have a coressponding closing fragment. (hint: try adding `</>`)
 --> tests/html_macro_tests/fragments/fragment_fail.rs:5:15
  |
5 |     html! { <><> };
  |               ^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
 --> tests/html_macro_tests/fragments/fragment_fail.rs:6:20
  |
6 |     html! { <><div></> };
  |                    ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<div>`)
 --> tests/html_macro_tests/fragments/fragment_fail.rs:7:15
  |
7 |     html! { <></div></> };
  |               ^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
 --> tests/html_macro_tests/fragments/fragment_fail.rs:8:13
  |
8 |     html! { </> };
  |             ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<key>`)
 --> tests/html_macro_tests/fragments/fragment_fail.rs:9:24
  |
9 |     html! { <key="key"></key> };
  |                        ^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
  --> tests/html_macro_tests/fragments/fragment_fail.rs:10:18
   |
10 |     html! { <key></> };
   |                  ^^^

error: Expected a literal or an expression block
  --> tests/html_macro_tests/fragments/fragment_fail.rs:11:18
   |
11 |     html! { <key=></> };
   |                  ^

error: Fragment supports only a single `key` attribute
  --> tests/html_macro_tests/fragments/fragment_fail.rs:12:25
   |
12 |     html! { <key="key1" key="key2"></> };
   |                         ^^^

error: Fragment supports only the `key` attribute
  --> tests/html_macro_tests/fragments/fragment_fail.rs:13:14
   |
13 |     html! { <other_attr="attr value"></> };
   |              ^^^^^^^^^^

error: Fragment supports only a single `key` attribute
  --> tests/html_macro_tests/fragments/fragment_fail.rs:14:24
   |
14 |     html! { <key="key" other_attr="attr value"></> };
   |                        ^^^^^^^^^^

error: Fragment supports only the `key` attribute
  --> tests/html_macro_tests/fragments/fragment_fail.rs:15:14
   |
15 |     html! { <other_attr="attr value" key="key"></> };
   |              ^^^^^^^^^^

error: Fragment supports only the `key` attribute
  --> tests/html_macro_tests/fragments/fragment_fail.rs:16:14
   |
16 |     html! { <other_attr1="attr value" other_attr2="attr val"></> };
   |              ^^^^^^^^^^^
